Hopefully fix scrolling and background issues on mobile devices.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,6 @@ html, body {
 
 body {
   @apply bg-zelda-dark text-white;
-  background: linear-gradient(to bottom, #0b2e36 0%, #4e7c76 100%);
   position: relative;
   min-height: 100vh;
 }
@@ -25,10 +24,8 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.05;
-  pointer-events: none;
-  filter: contrast(170%) brightness(1000%);
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='120' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+  background: linear-gradient(to bottom, #0b2e36 0%, #4e7c76 100%);
+  z-index: -3;
 }
 
 body::after {
